--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ crashlytics-build.properties
 
 SUS/ProjectSettings/ProjectVersion.txt
 SUS/ProjectSettings/ProjectVersion.txt
+SUS/ProjectSettings/ProjectVersion.txt
